tests/reference/asr-test_set_indexing-a1c21b8.stderr
semantic error: 'set' object is not subscriptable
 --> tests/errors/test_set_indexing.py:7:9
  |
7 |     a = s[0]
  |         ^^^^ 


Note: Please report unclear or confusing messages as bugs at
https://github.com/lcompilers/lpython/issues.
